--- a/client/game/index.html
+++ b/client/game/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/src/output.css" rel="stylesheet">
-    <title>Game</title>
+    <link href="/src/assets/output.css" rel="stylesheet">
+    <title>Vite App</title>
   </head>
   <body>
     <div id="app"></div>
