--- a/client/game/index.html
+++ b/client/game/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/output.css" rel="stylesheet">
-    <title>Vite App</title>
+    <title>CasAnimale - Games</title>
   </head>
   <body>
     <div id="app"></div>
