aggiunte card sono MOLTO FELICIO

--- a/server/src/back-office/index.html
+++ b/server/src/back-office/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="script/index.js"></script>
-    <title>Area risevata</title>
+    <title>CasAnimale - Area risevata</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./components/SideBar.html" rel="import" />
@@ -20,9 +20,9 @@
     </script>
   </head>
   <body>
-    <div class="flex flex-row flex-1 h-screen">
-      <div class="flex" id="sidebar"></div>
-      <div class="flex w-full" id="presentation"></div>
+    <div class="flex flex-col md:flex-row flex-1 h-screen">
+      <div class="flex justify-center py-5 sm:py-0 sm:pl-5" id="sidebar"></div>
+      <div class="flex w-full p-5" id="presentation"></div>
     </div>
   </body>
 </html>
