--- a/server/src/back-office/index.html
+++ b/server/src/back-office/index.html
@@ -20,9 +20,9 @@
     </script>
   </head>
   <body>
-    <div class="flex flex-col md:flex-row flex-1 h-screen">
-      <div class="flex justify-center py-5 sm:py-0 sm:pl-5" id="sidebar"></div>
-      <div class="flex w-full p-5" id="presentation"></div>
+    <div class="flex flex-col md:flex-row flex-1">
+      <div class="fixed flex justify-center py-5 md:py-0 md:pl-5 self-center" id="sidebar"></div>
+      <div class=" flex w-full p-5 ml-0 md:ml-[106px]" id="presentation"></div>
     </div>
   </body>
 </html>
