--- a/server/src/back-office/index.html
+++ b/server/src/back-office/index.html
@@ -11,16 +11,19 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="./components/SideBar.html" rel="import" />
     <link href="./components/PresentationPage.html" rel="import" />
+    <link href="./components/Login.html" rel="import" />
 
     <script>
       $(document).ready(function () {
-        $("#sidebar").load("./components/SideBar.html");
-        $("#presentation").load("./components/PresentationPage.html")
+        $("#login").load("./components/Login.html");
+        //$("#sidebar").load("./components/SideBar.html");
+        //$("#presentation").load("./components/PresentationPage.html")
       });
     </script>
   </head>
   <body>
-    <div class="flex flex-col md:flex-row flex-1">
+    <div id="login"></div>
+    <div class="flex flex-col md:flex-row flex-1 hidden">
       <div class="fixed flex justify-center py-5 md:py-0 md:pl-5 self-center" id="sidebar"></div>
       <div class=" flex w-full p-5 ml-0 md:ml-[106px]" id="presentation"></div>
     </div>
