--- a/server/src/back-office/index.html
+++ b/server/src/back-office/index.html
@@ -17,8 +17,8 @@
 
     <script>
      $(document).ready(function () {
-        $("#login").load("./components/Login.html");
-        window.location.href = "/login";
+        //$("body").load("./services/login.html");
+        window.location.href = "services/login.html";
         //$("#sidebar").load("./components/SideBar.html");
         //$("#presentation").load("./components/PresentationPage.html");
       });
@@ -26,7 +26,7 @@
   </head>
 
   <body>
-    <button onclick="setToken(true)">LOGIN</button>
+    <!--button onclick="setToken(true)">LOGIN</button>
     <div id="login"></div>
     <div id="body" hidden class="flex flex-col md:flex-row flex-1">
       <div
@@ -34,7 +34,7 @@
         id="sidebar"
       ></div>
       <div class="flex w-full p-5 ml-0 md:ml-[106px]" id="presentation"></div>
-    </div>
+    </div-->
   </body>
 </html>
 
