--- a/server/src/back-office/services/login.html
+++ b/server/src/back-office/services/login.html
@@ -6,12 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/style.css" />
     <script type="text/javascript" src="script/index.js"></script>
-    <title>CasAnimale - Login </title>
+    <title>CasAnimale - Login</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!--script src="../../node_modules/jquery/dist/jquery.min.js"></script-->
     <script src="https://cdn.tailwindcss.com"></script>
 
-    <script></script>
+    <script>
+      const login = () => {
+        window.location.href = "home.html";
+      };
+    </script>
   </head>
 
   <body>
@@ -71,6 +75,7 @@
                               #c798a4
                             );
                           "
+                          onclick="login()"
                         >
                           Log in
                         </button>
