--- a/server/src/back-office/services/home.html
+++ b/server/src/back-office/services/home.html
@@ -91,10 +91,10 @@
   <body>
     <div class="flex flex-col md:flex-row flex-1">
       <div
-        class="fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
+        class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
         id="sidebar"
       ></div>
-      <div class="flex w-full p-5 ml-0 md:ml-[106px]" id="presentation">
+      <div class="flex w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]" id="presentation">
         <div class="flex self-center flex-col w-full">
           <div class="flex flex-col text-center p-3 md:pb-6">
             <div class="primary font-bold text-2xl sm:text-4xl md:text-6xl">
