--- a/server/src/back-office/services/schedules.html
+++ b/server/src/back-office/services/schedules.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
-    <link rel="import" href="../components/prenotation-list.html" />
+    <link href="../components/prenotation-list.html" rel="import" />
+    <link href="../components/sidebar.html" rel="import" />
+    <link href="../components/timetable.html" rel="import" />
     <script type="text/javascript" src="../script/index.js"></script>
     <title>CasAnimale - Back Office</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
@@ -13,28 +15,53 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       $(document).ready(function () {
-          $("#list").load("../components/prenotation-list.html");
+        $("#sidebar").load("../components/sidebar.html");
+        $("#list").load("../components/prenotation-list.html");
+        $("#timetable").load("../components/timetable.html");
+      });
+      const showPtsList = () => {
+        $(document).ready(function () {
+          $("#timetable").addClass("hidden");
         });
-      const getPtsList = () => {
         $(document).ready(function () {
           $("#list").removeClass("hidden");
         });
       };
-      const removePtsList = () => {
+      const showTimeTable= () => {
         $(document).ready(function () {
           $("#list").addClass("hidden");
+        });
+        $(document).ready(function () {
+          $("#timetable").removeClass("hidden");
         });
       };
     </script>
   </head>
   <body>
-    <div id="title" class="font-bold text-6xl m-4">PRENOTATIONS</div>
-    <button class="bg-[#59114D] hover:bg-blue-700 text-white font-bold py-2 px-4 rounded m-4" onclick="getPtsList()">
-      GET LIST
-    </button>
-    <button class="bg-[#59114D] hover:bg-blue-700 text-white font-bold py-2 px-4 rounded m-4" onclick="removePtsList()">
-      REMOVE LIST
-    </button>
-    <div id="list" class="hidden flex flex-1 m-4"></div>
+    <div class="flex flex-col md:flex-row flex-1 h-full">
+      <div
+        class="md:fixed flex justify-center py-5 md:py-0 md:pl-5 self-center"
+        id="sidebar"
+      ></div>
+      <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
+        <div id="title" class="font-bold text-2xl sm:text-6xl m-4">SCHEDULES</div>
+        <div class="flex flex-row">
+          <button
+            class="bg-[#59114D] hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
+            onclick="showPtsList()"
+          >
+            PRENOTATIONS LIST
+          </button>
+          <button
+            class="bg-[#59114D] hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
+            onclick="showTimeTable()"
+          >
+            TIMES
+          </button>
+        </div>
+        <div id="list" class="hidden flex flex-1 m-4"></div>
+        <div id="timetable" class=" flex  m-4"></div>
+      </div>
+    </div>
   </body>
 </html>
