--- a/server/src/back-office/services/login.html
+++ b/server/src/back-office/services/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/style.css" />
-    <script type="text/javascript" src="script/index.js"></script>
+    <link rel="stylesheet" href="../css/style.css" />
+    <script type="text/javascript" src="../script/index.js"></script>
     <title>CasAnimale - Login</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <!--script src="../../node_modules/jquery/dist/jquery.min.js"></script-->
