--- a/server/src/back-office/services/schedules.html
+++ b/server/src/back-office/services/schedules.html
@@ -27,7 +27,7 @@
           $("#list").removeClass("hidden");
         });
       };
-      const showTimeTable= () => {
+      const showTimeTable = () => {
         $(document).ready(function () {
           $("#list").addClass("hidden");
         });
@@ -35,6 +35,7 @@
           $("#timetable").removeClass("hidden");
         });
       };
+      
     </script>
   </head>
   <body>
@@ -44,7 +45,9 @@
         id="sidebar"
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
-        <div id="title" class="font-bold text-2xl sm:text-6xl m-4">SCHEDULES</div>
+        <div id="title" class="font-bold text-2xl sm:text-6xl m-4">
+          SCHEDULES
+        </div>
         <div class="flex flex-row">
           <button
             class="bg-[#59114D] hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
@@ -60,7 +63,7 @@
           </button>
         </div>
         <div id="list" class="hidden flex flex-1 m-4"></div>
-        <div id="timetable" class=" flex  m-4"></div>
+        <div id="timetable" class="flex m-4"></div>
       </div>
     </div>
   </body>
