--- a/server/src/back-office/services/home.html
+++ b/server/src/back-office/services/home.html
@@ -65,7 +65,7 @@
           tmp +=
             `<div class="card flex space-between">
             <button
-            class="card-body bg-[#cba9b6] hover:bg-opacity-50"
+            class="card-body hover:bg-opacity-50"
             style="padding-left: 3rem; padding-right: 3rem; padding-top:3rem; max-height: 18rem; max-width: 18rem; margin:0.5rem"
             onclick=gotologin("`+item.href+`")
             >
