--- a/server/src/back-office/services/schedules.html
+++ b/server/src/back-office/services/schedules.html
@@ -50,13 +50,13 @@
         </div>
         <div class="flex flex-row">
           <button
-            class="bg-[#59114D] hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
+            class="bg-primary hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
             onclick="showPtsList()"
           >
             PRENOTATIONS LIST
           </button>
           <button
-            class="bg-[#59114D] hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
+            class="bg-primary hover:opacity-80 text-white font-bold py-2 px-4 rounded m-4"
             onclick="showTimeTable()"
           >
             TIMES
