--- a/server/src/back-office/services/customers.html
+++ b/server/src/back-office/services/customers.html
@@ -1,1 +1,7 @@
 manage customers
+
+<!--
+    amministratori vedono tutti i clienti e modificano prenotazioni
+    
+    company vede clienti che hanno avuto a che fare con lei
+-->
