--- a/server/src/back-office/services/forum.html
+++ b/server/src/back-office/services/forum.html
@@ -1,1 +1,8 @@
 manage forum
+
+<!--
+    si vede lista post
+    gli amministratori possono eliminare commenti e post
+
+    compagnie non vedono nulla (?)
+-->
