--- a/server/src/back-office/services/home.html
+++ b/server/src/back-office/services/home.html
@@ -40,7 +40,7 @@
           href: "ecommerce.html",
         },
         {
-          text: "schedules",
+          text: "prenotations",
           img: "../public/schedule.png",
           alt: "prenotation icon",
           href: "schedules.html",
@@ -52,10 +52,10 @@
           href: "billing.html",
         },
         {
-          text: "videocalls",
-          img: "../public/videocall.png",
+          text: "companies",
+          img: "../public/companies.png",
           alt: "online services icon",
-          href: "videocalls.html",
+          href: "companies.html",
         },
       ];
 
