--- a/server/src/back-office/services/schedules.html
+++ b/server/src/back-office/services/schedules.html
@@ -46,7 +46,7 @@
       ></div>
       <div class="flex flex-col w-full p-5 pt-0 ml-0 md:p-5 md:ml-[106px]">
         <div id="title" class="font-bold text-2xl sm:text-6xl m-4">
-          SCHEDULES
+          PRENOTATIONS
         </div>
         <div class="flex flex-row">
           <button
@@ -68,3 +68,8 @@
     </div>
   </body>
 </html>
+
+
+<!--
+  select: all, user, company (city, day)
+-->
