--- a/server/src/back-office/index.html
+++ b/server/src/back-office/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
       $(document).ready(function () {
-        window.location.href = "services/login.html";
+        window.location.href = "views/login.html";
       });
     </script>
   </head>
