--- a/server/src/back-office/tabs/customers-list.html
+++ b/server/src/back-office/tabs/customers-list.html
@@ -12,7 +12,7 @@
       await loadList();
     };
     //TODO non funziona
-    const deleteCust = async (id) => {
+    const deleteCstmr = async (id) => {
       var ret = await fetch("http://localhost:5000/api/user/" + id, {
         method: "DELETE",
         body: {},
@@ -25,61 +25,67 @@
       time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
       return time;
     };
-
+    var toUTC = function (date) {
+      var newDate = new Date();
+      newDate.setTime(date.getTime() + (date.getTimezoneOffset() * 60 * 1000));
+      return newDate;
+    };
     const filterList = () => {
       let reqId = $("#filterCustomerId").val();
       let reqEmail = $("#filterCustomerEmail").val();
       let reqBirthDate = $("#filterCustomerBirthDate").val();
-      let reqVIP = $("#filterOnlyVIP").val();
-      let reqNotVIP = $("#filterNotVIP").val();
-      let comparePrenotation = 0;
-      let compareCompany = 0;
-      let compareCustomer = 0;
-      let compareSchedule = 0;
-      let compareCity = 0;
+      let reqMinBirthDate = $("#filterMinDate").val();
+      let reqMaxBirthDate = $("#filterMaxDate").val();
+      let reqFavAnimal = $("#filterFavAnimal").val();
+      let reqVIP = $("#filterVIP").val();
+      let compareId = 0;
+      let compareEmail = 0;
+      let compareBirthDate = 0;
+      let compareMinBirthDate = 0;
+      let compareMaxBirthDate = 0;
+      let compareFavAnimal = 0;
+      let compareVIP = 0;
       let tmp = "";
       $(document).ready(function () {
         if (cstmrs !== undefined) {
           let index = 0;
           cstmrs.map((item) => {
-            comparePrenotation = reqPrenotation === "" ? 0 : reqPrenotation === item._id ? 0 : 1;
-            compareCompany = reqCompany === "" ? 0 : reqCompany === item.company ? 0 : 1;
-            compareCustomer = reqCustomer === "" ? 0 : reqCustomer === item.user ? 0 : 1;
-            compareSchedule = reqSchedule === "" ? 0 : reqSchedule === filterStartTime(item.start) ? 0 : 1;
-            compareCity = reqCity === "" ? 0 : reqCity.toLowerCase() === item.place.toLowerCase() ? 0 : 1;
+            compareId = reqId === "" ? 0 : item._id.toLowerCase().includes(reqId.toLowerCase()) ? 0 : 1;
+            compareEmail = reqEmail === "" ? 0 : item.email.toLowerCase().includes(reqEmail.toLowerCase()) ? 0 : 1;
+            compareBirthDate = reqBirthDate === "" ? 0 : reqBirthDate === item.birth.substring(0, 10) ? 0 : 1;
+            compareMinBirthDate = reqMinBirthDate === "" ? 0 : new Date(reqMinBirthDate).getTime() <= new Date(item.birth).getTime() ? 0 : 1;
+            compareMaxBirthDate = reqMaxBirthDate === "" ? 0 : new Date(reqMaxBirthDate).getTime() >= new Date(item.birth).getTime() ? 0 : 1;
+            compareFavAnimal = reqFavAnimal === "" ? 0 : item.favanimal.toLowerCase().includes(reqFavAnimal.toLowerCase()) ? 0 : 1;
+            compareVIP = reqVIP === "" ? 0 : reqVIP === 'true' ? (item.vip === true ? 0 : 1) : (item.vip === false || item.vip === undefined ? 0 : 1);
             if (
-              comparePrenotation + compareCompany + compareCustomer + compareSchedule + compareCity === 0
+              compareId + compareEmail + compareBirthDate + compareMinBirthDate + compareMaxBirthDate + compareFavAnimal + compareVIP === 0
             ) {
-              tmp += makeItemPrenotation(
+              tmp += makeItemCustomer(
                 index,
                 item._id,
-                item.place,
-                item.start,
-                item.user,
-                item.company
+                item.name,
+                item.surname,
+                item.birth,
+                item.email,
+                item.password,
+                item.favanimal,
+                item.cart,
+                item.vip
               );
               index++;
-              totPrenotations = index;
+              totCustomers = index;
             }
           });
         }
         tmp !== ""
-          ? $("#ptsList").html(tmp)
-          : $("#ptsList").html("No prenotations founded with these filters");
-        $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
-        totPrenotations = 0;
+          ? $("#cstmrsList").html(tmp)
+          : $("#cstmrsList").html("No prenotations founded with these filters");
+        $("#totCustomers").html("TOTAL RESULTS: " + totCustomers);
+        totCustomers = 0;
       });
     };
 
-    const formatTime = (time) => {
-      let hours = +time.substring(11, 13) + 1;
-      time = hours > 12 ? (hours % 12) + "pm" : hours + "am";
-      time += " - ";
-      time += hours + 1 > 12 ? ((hours + 1) % 12) + "pm" : hours + 1 + "am";
-      return time;
-    };
-
-    const makeItemPrenotation = (index, id, place, start, user, company) => {
+    const makeItemCustomer = (index, id, name, surname, birth, email, password, favanimal, cart, vip) => {
       return (
         `
         <div class="flex flex-row my-3">
@@ -88,36 +94,42 @@
           </span>
           <div class="flex flex-row flex-1 bg-white/50 p-2 rounded">
             <div class="flex flex-col">
-              <div><span class="font-semibold">Prenotation id: </span>
+              <div><span class="font-semibold">Customer id: </span>
                 <button class="btn" onclick="copy(this)">`
                   + id + `
                   <i class="fa fa-copy"></i>
+                  <span class="font-semibold">`
+                    + isVIP(vip) + `
+                  </span>
                 </button>
               </div>
-              <div><span class="font-semibold">City: </span>`
-                + place + `
+              <div><span class="font-semibold">Name: </span>`
+                + name + `
               </div>
-              <div><span class="font-semibold">Date: </span>`
-                + start.substring(0, 10) + `
+              <div><span class="font-semibold">Surname: </span>`
+                + surname + `
               </div>
-              <div><span class="font-semibold">Schedule: </span>`
-                + formatTime(start) + `
+              <div><span class="font-semibold">Birth date: </span>`
+                + birth.substring(0, 10) + `
               </div>
-              <div><span class="font-semibold">Company id: </span>
+              <div><span class="font-semibold">Email: </span>
                 <button class="btn" onclick="copy(this)">`
-                  + company + `
+                  + email + `
                   <i class="fa fa-copy"></i>
                 </button>
               </div>
-              <div><span class="font-semibold">Customer id: </span>
-                <button class="btn" onclick="copy(this)">`
-                  + user + `
-                  <i class="fa fa-copy"></i>
-                </button>
+              <div><span class="font-semibold">Password: </span>`
+                + password + `
+              </div>
+              <div><span class="font-semibold">Favorite animal: </span>`
+                + favanimal + `
+              </div>
+              <div><span class="font-semibold">Cart: </span>`
+                + showCart(cart) + `
               </div>
             </div>
-            <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deletePt('`
-              + company + `')">
+            <button class="btn bg-danger p-1 mx-2 hover:opacity-80 text-white font-bold rounded-xl self-center" onclick="deleteCstmr('`
+              + id + `')">
               Delete
             </button>
           </div>
@@ -127,22 +139,27 @@
     const loadList = () => {
       let tmp = "";
       $(document).ready(function () {
+        console.log("debugging");
         if (cstmrs !== undefined) {
           cstmrs.map((item, index) => {
-            tmp += makeItemPrenotation(
+            tmp += makeItemCustomer(
               index,
               item._id,
-              item.place,
-              item.start,
-              item.user,
-              item.company
+              item.name,
+              item.surname,
+              item.birth,
+              item.email,
+              item.password,
+              item.favanimal,
+              item.cart,
+              item.vip
             );
-            totPrenotations = index + 1;
+            totCustomers = index + 1;
           });
         }
-        $("#ptsList").html(tmp);
-        $("#totPrenotations").html("TOTAL RESULTS: " + totPrenotations);
-        totPrenotations = 0;
+        $("#cstmrsList").html(tmp);
+        $("#totCustomers").html("TOTAL RESULTS: " + totCustomers);
+        totCustomers = 0;
       });
     };
 
@@ -154,13 +171,31 @@
       document.execCommand("copy", false);
       inp.remove();
     };
-    getPts();
+
+    const isVIP = (vip) => {
+      if(vip === true)
+        return "VIP";
+      else
+        return "";
+    };
+    const showCart = (array) => {
+      let ret = "";
+      if(array.length > 0){
+        array.map((item) => {
+          ret += item.id + ", ";
+        })
+        return ret.substring(0, ret.length - 2);   // tolgo gli utili due caratteri ", "
+      }
+      else
+        return "-";
+    };
+    getCusts();
   </script>
 </head>
 
 <body>
   <div class="flex flex-col flex-1">
-    <div id="prenotationsFilters" class="flex flex-col">
+    <div id="customersFilters" class="flex flex-col">
       <!-- primo filtro-->
       <div class="flex flex-col sm:flex-row">
         <span class="flex">
@@ -184,10 +219,10 @@
         </div>
         <div class="flex flex-col sm:flex-row lg:mr-4">
           <span class="flex">
-            <label for="filterCustomerBirthDate" class="flex self-center primary font-semibold">Filter by birth date:</label>
+            <label for="filterCustomerBirthDate" class="flex self-center primary font-semibold">Filter by birth date: </label>
           </span>
           <span>
-            <input id="filterCustomerBirthDate" name="filterCustomerBirthDate" type="text" placeholder="ex. 12-12-2022"
+            <input id="filterCustomerBirthDate" name="filterCustomerBirthDate" type="text" placeholder="ex. yyyy-mm-dd"
               class="px-1 m-1 rounded w-[15rem]" oninput="filterList()" />
           </span>
         </div>
@@ -196,25 +231,53 @@
       <div class="flex flex-col lg:flex-row">
         <div class="flex flex-col sm:flex-row lg:mr-4">
           <span class="flex">
-            <label for="filterOnlyVIP" class="flex self-center primary font-semibold">VIP customers </label>
+            <label for="filterMinDate" class="flex self-center primary font-semibold">Filter by min birth date: </label>
           </span>
           <span>
-            <input id="filterOnlyVIP" name="filterOnlyVIP" type="radio" value="VIP" class="px-1 m-1 rounded w-[15rem]" oninput="filterList()" />
+            <input id="filterMinDate" name="filterMinDate" type="text" placeholder="ex. yyyy-mm-dd"
+              class="px-1 m-1 rounded w-[12rem]" oninput="filterList()" />
+          </span>
+        </div>
+      
+        <div class="flex flex-col sm:flex-row lg:mr-4">
+          <span class="flex">
+            <label for="filterMaxDate" class="flex self-center primary font-semibold">Filter by max birth date: </label>
+          </span>
+          <span>
+            <input id="filterMaxDate" name="filterMaxDate" type="text" placeholder="ex. yyyy-mm-dd"
+              class="px-1 m-1 rounded w-[12rem]" oninput="filterList()" />
+          </span>
+        </div>
+      </div>
+      <!-- sesto e settimo filtro-->
+      <div class="flex flex-col lg:flex-row">
+        <div class="flex flex-col sm:flex-row lg:mr-4">
+          <span class="flex">
+            <label for="filterFavAnimal" class="flex self-center primary font-semibold">Filter by favorite animal: </label>
+          </span>
+          <span>
+            <input id="filterFavAnimal" name="filterFavAnimal" type="text" placeholder="ex. dog" class="px-1 m-1 rounded w-[12rem]" oninput="filterList()" />
           </span>
         </div>
 
         <div class="flex flex-col sm:flex-row lg:mr-4">
           <span class="flex">
-            <label for="filterNotVIP" class="flex self-center primary font-semibold">Non VIP customers </label>
-            <input id="filterNotVIP" name="filterNotVIP" type="radio" value="VIP" class="px-1 m-1" oninput="filterList()" />
+            <label for="filterVIP" class="flex self-center primary font-semibold">VIP option: </label>
           </span>
-          <!--<span class="flex justify-start">
-            <input id="filterNotVIP" name="filterNotVIP" type="radio" value="VIP" class="px-1 m-1 justify-self-start w-[15rem]" oninput="filterList()" />
-          </span>-->
+          <span class="flex justify-start">
+            <select id="filterVIP" name="filterVIP" type="text" placeholder="ex. psychologist"
+              class="px-1 m-1 rounded w-[15rem] bg-[#FFFFFF]" oninput="filterList()">
+              <option value="" class="text-[#939798]">
+                --Chose an option--
+              </option>
+              <option value="true">VIP</option>
+              <option value="false">Not VIP</option>
+            </select>
+          </span>
         </div>
       </div>
     </div>
-    <div id="totPrenotations" class="flex flex-col flex primary font-semibold mt-4 my-2"></div>
-    <div id="ptsList" class="flex flex-col flex-1"></div>
+    <div id="totCustomers" class="flex flex-col flex primary font-semibold mt-4 my-2"></div>
+    <div id="cstmrsList" class="flex flex-col flex-1"></div>
   </div>
 </body>
