fix scritta vip

--- a/server/src/back-office/tabs/customers-list.html
+++ b/server/src/back-office/tabs/customers-list.html
@@ -174,7 +174,7 @@
 
     const isVIP = (vip) => {
       if(vip === true)
-        return "VIP";
+        return `<span class="font-semibold text-white bg-yellow-500 ml-3 p-1 rounded">VIP</span>`;
       else
         return "";
     };
