change data btns prenotations

--- a/server/src/back-office/tabs/es-changeData-tabella.html
+++ b/server/src/back-office/tabs/es-changeData-tabella.html
@@ -47,7 +47,7 @@
               <span class="day">Bubano</span>
               <input
                 type="text"
-                name="new-favanimal"
+                name="cityMon"
                 id="cityMon"
                 value="Bubano"
                 placeholder="Type city"
@@ -61,7 +61,7 @@
               <span class="day">Torino</span>
               <input
                 type="text"
-                name="new-favanimal"
+                name="cityTue"
                 id="cityTue"
                 value="Torino"
                 placeholder="Type city"
@@ -75,7 +75,7 @@
               <span class="day">Trieste</span>
               <input
                 type="text"
-                name="new-favanimal"
+                name="cityWen"
                 id="cityWen"
                 value="Trieste"
                 placeholder="Type city"
@@ -89,7 +89,7 @@
               <span class="day">Torino</span>
               <input
                 type="text"
-                name="new-favanimal"
+                name="cityThu"
                 id="cityThu"
                 value="Torino"
                 placeholder="Type city"
@@ -103,7 +103,7 @@
               <span class="day">Torino</span>
               <input
                 type="text"
-                name="new-favanimal"
+                name="cityFri"
                 id="cityFri"
                 value="Torino"
                 placeholder="Type city"
