--- a/server/src/back-office/tabs/sidebar.html
+++ b/server/src/back-office/tabs/sidebar.html
@@ -24,7 +24,7 @@
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
-        stroke-width="1.5"
+        stroke-width="1.8"
         stroke="currentColor"
         class="w-6 h-6 shrink-0"
       >
@@ -46,7 +46,7 @@
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
-        stroke-width="1.5"
+        stroke-width="1.6"
         stroke="currentColor"
         class="w-6 h-6 shrink-0"
       >
@@ -70,16 +70,13 @@
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
-        height="12"
-        width="12"
-        stroke-width="1.5"
+        stroke-width="1.6"
         stroke="currentColor"
-        class="w-6 h-6 shrink-0"
-      >
+        class="w-6 h-6 shrink-0">
         <path
           stroke-linecap="round"
           stroke-linejoin="round"
-          d="M4 18h2v2h12V4H6v2H4V3a1 1 0 0 1 1-1h14a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1H5a1 1 0 0 1-1-1v-3zm2-7h7v2H6v3l-5-4 5-4v3z"
+          d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15M12 9l-3 3m0 0l3 3m-3-3h12.75"
         />
       </svg>
       <small class="text-center text-xs font-medium"> Logout </small>
@@ -96,7 +93,7 @@
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
         viewBox="0 0 24 24"
-        stroke-width="1.5"
+        stroke-width="1.6"
         stroke="#59114D"
         class="w-6 h-6"
       >
