--- a/server/src/back-office/tabs/sidebar.html
+++ b/server/src/back-office/tabs/sidebar.html
@@ -11,12 +11,12 @@
     }
   </script>
 </head>
-<div class="bg-transparent dark:bg-slate-900 relative rounded-lg">
+<div class="bg-transparent relative rounded-lg">
   <nav
-    class="flex relative flex-row-reverse md:flex-col shrink-0 grow-0 justify-around gap-4 border-t border-gray-200 bg-white/50 p-2.5 shadow-lg backdrop-blur-lg dark:border-slate-600/60 dark:bg-slate-800/50 top-2/4 -translate-y-2/4 min-h-[auto] min-w-[64px] rounded-lg border"
+    class="flex relative flex-row-reverse md:flex-col shrink-0 grow-0 justify-around gap-4 border-t border-gray-200 bg-white/50 p-2.5 shadow-lg backdrop-blur-lg top-2/4 -translate-y-2/4 min-h-[auto] min-w-[64px] rounded-lg border"
   >
     <button
-      class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F] dark:text-gray-400 dark:hover:bg-slate-800"
+      class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F] "
       onclick="profile()"
     >
       <!-- HeroIcon - User -->
@@ -39,7 +39,7 @@
     </button>
 
     <button
-      class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F] dark:text-gray-400 dark:hover:bg-slate-800"
+      class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F] "
     >
       <!-- HeroIcon - Chart Bar -->
       <svg
@@ -61,7 +61,7 @@
     </button>
 
     <button
-      class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F] dark:text-gray-400 dark:hover:bg-slate-800"
+      class="flex aspect-square min-h-[32px] w-16 flex-col items-center justify-center gap-1 rounded-md p-1.5 text-gray-700 hover:text-[#E1DEE3] hover:bg-[#826C7F]"
       onclick="logout()"
     >
       <!-- HeroIcon - Cog-6-tooth -->
@@ -85,7 +85,7 @@
       <small class="text-center text-xs font-medium"> Logout </small>
     </button>
 
-    <hr class="dark:border-gray-700/60" />
+    <hr/>
 
     <button
       class="flex h-16 w-16 flex-col items-center justify-center gap-1 text-[#59114D] dark:text-gray-400"
